# robo_magellan

./: .gitignore  .project  .pydevproject  CMakeLists.sav  CMakeLists.txt  mock-mission.adoc  package.sav  package.xml  pylint.cfg  readme.adoc  robo_magellan.adoc  setup.py  victoria.sh  waypoints.adoc
config/: genius-f100-bins-0_6.json  logitech-C270-bins-0_6.json  logitech-C270-bins.json  logitech-C270.yaml  logitech-C930e-bins-0_6.json  navigator-manual.yaml  navigator-mock.yaml  navigator.yaml  realsense-bins-0_6.json  simulate_stampede.yaml  view_mission.rviz
data/: cone1.xcf  cone2.xcf  cone3.xcf  cone4.xcf  cone5.xcf  cone6.xcf  cone7.xcf  cone8.xcf  cone9.xcf  map-wp-one-cone.yaml  map-wp-two-cones.yaml  sample.qgc-wpl.txt
doc/: MagellanProgram.odp  Magellan_signup.odp  PartsAndTools.adoc  RC2Robot.adoc  Startup-Shutdown Checklists.adoc  Step1_SensorPlatform.adoc  Step2_GroundStation.adoc  Step3_SensorPlatformLayout.adoc  a-star.rules  chatty.adoc  esp32.rules  mock-mission.adoc  pixhawk.rules  state-diagram.txt  todo.adoc
launch/: chatty.launch  cone_finder.launch  cone_finder.yaml  cone_finder_video.launch  cone_finder_video_file.launch  cone_finder_webcam.launch  cone_seeker.launch  cone_seeker_video.launch  display.launch  exec.launch  exec.yaml  exec_sitl.launch  mock_mission.launch  mw.launch  navigator.launch  pr_launch1.launch  pr_launch2.launch  pr_startup.sh  pwm_tests.launch  realsense.xml  realsense_rviz.xml  rviz.launch  simulate.launch  test_camera_feedback_mavlink_msg.sh  train_color.launch  utm_transform.launch  v_launch.sh  view_mission.launch  wheel_encoder.launch
msg/: LocalWaypoint.msg  LocalWaypointList.msg  drive_params.msg  location_msgs.msg  pose_data.msg  to_exec.msg  to_state.msg
scripts/: arduino_receiver  auto_number.py  avg_waypoints  capture_waypoints  chatty.py  cone_code.py  detect_cones.py  exec  exec.py  monitor.py  (+29 more)
(+165 files in other folders)
