<?xml version="1.0"?>
<package>
  <name>robo_magellan</name>
  <version>0.0.1</version>
  <description>The robo_magellan package</description>

  <maintainer email="programmingrobotsstudygroup@gmail.com">robo_magellan maintainer</maintainer>

  <license>Apache-2.0</license>

  <url type="website">http://programmingrobotsstudygroup.github.io/2017RoboMagellan.html</url>
  <url type="repository">https://github.com/ProgrammingRobotsStudyGroup/robo_magellan</url>
  <url type="bugtracker">https://github.com/ProgrammingRobotsStudyGroup/robo_magellan/issues</url>


  <author email="programmingrobotsstudygroup@gmail.com">PRSG</author>


  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>


  <!-- <doc_depend>doxygen</doc_depend> -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
